--- a/voting_app/public/index.html
+++ b/voting_app/public/index.html
@@ -17,7 +17,7 @@
       <div id="content"></div>
     </div>
     <script src="./js/seed.js"></script>
-    <script src="./js/app.js"></script>
+    <script type="text/babel" data-plugins="transform-class-properties" src="./js/app.js"></script>
   </body>
 
 </html>
